--- a/alianzas.html
+++ b/alianzas.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <link rel="icon" type="image/png" href="img/logo.png" />
+
   <title>COOMUSTRANSTUR</title>
-  <link rel="stylesheet" href="css/normalize.css">
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -115,103 +117,103 @@
         </div>
         <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            <div class="alianza row align-items-center">
-              <div class="col text-center">
-                <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                    class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
-              </div>
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
               <div class="w-100"></div>
-              <div class="col text-center">
-  
-                <h4>Restaurante y Hotel El Buen Gusto</h4>
-                <br>
-  
-                Propietario: STELLA <br>
-                Ubicación: San Cipriano
-  
-                <br>
-                <br>
-  
-                <div class="w-100"></div>
-                <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
-                <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
-                <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
-  
-                <div class="w-100"></div>
-                <a class="" href="#!">www.facebook.com/elbuengusto</a>
-  
-                <div class="w-100"></div>
-                <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
-                  fotos</button>
-              </div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
             </div>
           </div>
-          <!-- Div col -->
+        </div>
+        <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            <div class="alianza row align-items-center">
-              <div class="col text-center">
-                <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                    class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
-              </div>
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
               <div class="w-100"></div>
-              <div class="col text-center">
-  
-                <h4>Restaurante y Hotel El Buen Gusto</h4>
-                <br>
-  
-                Propietario: STELLA <br>
-                Ubicación: San Cipriano
-  
-                <br>
-                <br>
-  
-                <div class="w-100"></div>
-                <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
-                <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
-                <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
-  
-                <div class="w-100"></div>
-                <a class="" href="#!">www.facebook.com/elbuengusto</a>
-  
-                <div class="w-100"></div>
-                <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
-                  fotos</button>
-              </div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
             </div>
           </div>
-          <!-- Div col -->
+        </div>
+        <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            <div class="alianza row align-items-center">
-              <div class="col text-center">
-                <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
-                    class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
-              </div>
+          <div class="alianza row align-items-center">
+            <div class="col text-center">
+              <a href="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg" data-featherlight="image"><img
+                  class="cabecita img-fluid" src="img/restaurante y hotel el buen gusto/IMG_20180916_113530.jpg"></a>
+            </div>
+            <div class="w-100"></div>
+            <div class="col text-center">
+
+              <h4>Restaurante y Hotel El Buen Gusto</h4>
+              <br>
+
+              Propietario: STELLA <br>
+              Ubicación: San Cipriano
+
+              <br>
+              <br>
+
               <div class="w-100"></div>
-              <div class="col text-center">
-  
-                <h4>Restaurante y Hotel El Buen Gusto</h4>
-                <br>
-  
-                Propietario: STELLA <br>
-                Ubicación: San Cipriano
-  
-                <br>
-                <br>
-  
-                <div class="w-100"></div>
-                <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
-                <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
-                <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
-  
-                <div class="w-100"></div>
-                <a class="" href="#!">www.facebook.com/elbuengusto</a>
-  
-                <div class="w-100"></div>
-                <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
-                  fotos</button>
-              </div>
+              <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i>
+              <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
+              <i class="au fas fa-glass-martini fa-2x" data-toggle="tooltip" data-placement="bottom" title="Bar"></i>
+
+              <div class="w-100"></div>
+              <a class="" href="#!">www.facebook.com/elbuengusto</a>
+
+              <div class="w-100"></div>
+              <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver
+                fotos</button>
             </div>
           </div>
+        </div>
 
 
 
