--- a/acerca.html
+++ b/acerca.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>COOMUTRANSTUR</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" type="image/png" href="img/logo.png" />
+
+    <title>COOMUSTRANSTUR</title>
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
@@ -15,61 +16,61 @@
 <body>
     <!-- INDEX -->
     <section class="container-fluid pl-0 pr-0" id="">
+        <div class="">
             <div class="">
-                <div class="">
-                    <header class="">
-                        <div class="">
-                            <!-- menu -->
-                            <nav class="row navbar navbar-expand-sm bg-white">
-                                <div class="col">
-                                    <a class="navbar-brand ml-3 text-green" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
-                                </div>
-                                <div class="col d-none d-md-inline-block">
-                                    <ul class="navbar-nav mt-2 float-right">
-                                        <li class="nav-item">
-                                            <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
-                            <nav class="row navbar navbar-expand-lg bg-nav-menu">
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                                    ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon">
-                                        <i class="fas fa-bars"></i>
-                                    </span>
-                                </button>
-                                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                                    <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
-                                        <li class="nav-item active">
-                                            <a class="nav-link" href="#nosotros">Guía turística</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="acerca.html">Nosotros</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="politica.html">Política de Calidad</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
-                        </div>
-                    </header>
-                    <!-- texto main -->
-        </section>
+                <header class="">
+                    <div class="">
+                        <!-- menu -->
+                        <nav class="row navbar navbar-expand-sm bg-white">
+                            <div class="col">
+                                <a class="navbar-brand ml-3 text-green" href="index.html"><span class="title font-weight-bold">Coomutranstur</span><br></a>
+                            </div>
+                            <div class="col d-none d-md-inline-block">
+                                <ul class="navbar-nav mt-2 float-right">
+                                    <li class="nav-item">
+                                        <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                        <nav class="row navbar navbar-expand-lg bg-nav-menu">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                                ria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon">
+                                    <i class="fas fa-bars"></i>
+                                </span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                                <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#nosotros">Guía turística</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="acerca.html">Nosotros</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="politica.html">Política de Calidad</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </header>
+                <!-- texto main -->
+    </section>
 
-   
-<!-- Acerca de  -->
-<section class="container" id="nosotros">
+
+    <!-- Acerca de  -->
+    <section class="container" id="nosotros">
         <div class="row pb-3 pt-3 text-center bg-light">
             <div class="col" data-aos="zoom-in">
                 <h3>NOSOTROS</h3>
@@ -123,27 +124,27 @@
         <hr>
     </section>
 
-    
-<!-- Footer  -->
-<section id="footer" class="mt-4">
-    <div class="row">
-      <div class="col-12 text-center">
-        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
-      </div>
-      <div class="col-6 d-flex align-items-center justify-content-end">
-        <p class="d-inline">
-          <em>NIT: 830.500.789-9</em>
-        </p>
-      </div>
-      <div class="col-6 d-flex align-items-center justify-content-start">
-        <span style="font-size: 2em;">
-          <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
-        </span>
-      </div>
-    </div>
-  </section>
+
+    <!-- Footer  -->
+    <section id="footer" class="mt-4">
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-end">
+                <p class="d-inline">
+                    <em>NIT: 830.500.789-9</em>
+                </p>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-start">
+                <span style="font-size: 2em;">
+                    <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                </span>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Scripts -->
