--- a/politica.html
+++ b/politica.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" type="image/png" href="img/logo.png" />
+
+    <title>COOMUSTRANSTUR</title>
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
@@ -100,26 +102,26 @@
 
 
     <!-- Footer  -->
-  <section id="footer" class="mt-4">
-    <div class="row">
-      <div class="col-12 text-center">
-        <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
-      </div>
-      <div class="col-6 d-flex align-items-center justify-content-end">
-        <p class="d-inline">
-          <em>NIT: 830.500.789-9</em>
-        </p>
-      </div>
-      <div class="col-6 d-flex align-items-center justify-content-start">
-        <span style="font-size: 2em;">
-          <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
-        </span>
-      </div>
-    </div>
-  </section>
-  
+    <section id="footer" class="mt-4">
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO</p>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-end">
+                <p class="d-inline">
+                    <em>NIT: 830.500.789-9</em>
+                </p>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-start">
+                <span style="font-size: 2em;">
+                    <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                </span>
+            </div>
+        </div>
+    </section>
+
 
     <script src="js/bootstrap.min.js"></script>
 </body>
