--- a/alianzas.html
+++ b/alianzas.html
@@ -82,6 +82,10 @@
     <div class="container-fluid">
       <div class="row justify-content-around">
 
+        <div class="col-12 mb-3 text-center title font-weight-bold">
+          <p class="text-uppercase">Alianzas Nacionales</p>
+        </div>
+
         <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
@@ -278,9 +282,17 @@
 
 
   <!-- SCRIPTS -->
-  <script>
-    AOS.init();
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/holder.js"></script>
 
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
+    charset="utf-8"></script>
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
+    charset="utf-8"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script>
+  
+  <script>
     $('a.gallery').featherlightGallery({
       previousIcon: '«',
       nextIcon: '»',
@@ -289,17 +301,6 @@
       openSpeed: 300
     });
   </script>
-
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
-    charset="utf-8"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script>
-
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/holder.js"></script>
-
 
 </body>
 
